== 1.2 (in progress -- see github)

=== Major Changes
* Reek passes all its tests under ruby 1.8.6, 1.8.7 and 1.9.1 (fixed #16)
* Reek's output reports are now formatted differently:
** Reek is no longer silent about smell-free source code
** Output now reports on all files examined, even if they have no smells
** Smell warnings are indented in the report; file summary headers are not
** Reports for multiple sources are run together; no more blank lines
** Reports in spec matcher failures are quiet (fixed #38)
* The smells masked by *.reek config files can now be seen:
** The header for each source file now counts masked smells
** The --show-all (-a) option shows masked warnings in the report
* The spec matchers are now accessed by requiring 'reek/adapters/spec'

=== Minor Changes
* Reek's RDoc is now hosted at http://rdoc.info/projects/kevinrutherford/reek
* If a dir is passed on the command-line all **/*.rb files below it are examined (fixed #41)
* Several changes to the LongMethod counting algorithm:
** LongMethod now counts statements deeper into each method (fixed #25)
** LongMethod no longer counts control structures, only their contained stmts
** See http://wiki.github.com/kevinrutherford/reek/long-method for details
* LargeClass is disabled when checking in-memory classes (fixed #28)
* UtilityFunction no longer reports methods that call 'super' (fixed #39)
* Duplication warnings now report the number of identical calls
* UncommunicativeName warns about any name ending in a number (fixed #18)
* Now reports an error for corrupt config files
* Empty config files are ignored


== 1.1.3 2009-05-19

=== Minor Changes
* No longer depends directly on the sexp_processor gem

=== Fixes
* LargeClass now relies only on the given source code (fixed #26)

== 1.1.2 2009-05-18

=== Major Enhancements
* Switched from ParseTree to ruby_parser for source code parsing
* 'MyClass.should_not reek' now only possible if ParseTree gem installed

== 1.1.1 2009-05-08
